added TextBox and debugging. Also changed java version cause of crashes